--- a/Timely Goals/Base.lproj/LaunchScreen.storyboard
+++ b/Timely Goals/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +18,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark1024" translatesAutoresizingMaskIntoConstraints="NO" id="Ccl-48-XLO">
+                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Ccl-48-XLO" secondAttribute="height" multiplier="1:1" id="2cz-3d-bab"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="1024" id="EI1-Pb-XCK"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="1024" id="xGT-L8-DhJ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ccl-48-XLO" secondAttribute="trailing" id="7c4-7I-pGf"/>
+                            <constraint firstItem="Ccl-48-XLO" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Djn-gV-fz0"/>
+                            <constraint firstItem="Ccl-48-XLO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="J3U-Dg-Ivg"/>
+                            <constraint firstItem="Ccl-48-XLO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kyS-e2-ur7"/>
+                            <constraint firstItem="Ccl-48-XLO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="zZQ-FW-n0O"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Ccl-48-XLO" secondAttribute="bottom" id="zq2-VK-gYz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -22,4 +45,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="checkmark1024" width="1024" height="1024"/>
+    </resources>
 </document>
