--- a/Timely Goals/Base.lproj/Main.storyboard
+++ b/Timely Goals/Base.lproj/Main.storyboard
@@ -341,13 +341,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAS-vT-u2w">
-                                <rect key="frame" x="20" y="94" width="280" height="309.5"/>
-                                <string key="text">-Push clock &amp; pan to set reminder time
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fs0-bQ-smt" userLabel="Support">
+                                <rect key="frame" x="140" y="40" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="U5x-JY-EGl"/>
+                                    <constraint firstAttribute="width" constant="40" id="cBE-bz-q9V"/>
+                                </constraints>
+                                <state key="normal" image="email"/>
+                                <connections>
+                                    <action selector="emailSupport:" destination="xaU-kE-IpR" eventType="touchUpInside" id="Jew-lY-8uk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLu-CW-0rf" userLabel="Back">
+                                <rect key="frame" x="20" y="41" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="cxA-AS-W16"/>
+                                    <constraint firstAttribute="width" constant="40" id="sHd-4Q-gb1"/>
+                                </constraints>
+                                <state key="normal" image="backarrow"/>
+                                <connections>
+                                    <action selector="dismiss:" destination="xaU-kE-IpR" eventType="touchUpInside" id="cdB-pk-1Qh"/>
+                                </connections>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owJ-lD-EBD">
+                                <rect key="frame" x="20" y="90" width="280" height="478"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rci-wL-TnB">
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="453.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAS-vT-u2w">
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="453.5"/>
+                                                <string key="text">-Push clock and pan to set reminder time
 
--Push arrows &amp; pan to set recurrence period
+-Push arrows and pan to set recurrence period
 
--Hold task &amp; drag to change position
+-Hold task and drag to change position
 
 -You can drag and drop task into other list
 
@@ -357,38 +385,59 @@
 
 -Pinch task to set precise time
 
--Hold list name to rename or delete</string>
-                                <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fs0-bQ-smt">
-                                <rect key="frame" x="20" y="40" width="280" height="34"/>
-                                <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
-                                <state key="normal" title="Support"/>
+-Hold list name to rename or delete
+
+-Push remind button to disable reminder
+
+-Push recurrence button to disable recurrence</string>
+                                                <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="sAS-vT-u2w" secondAttribute="bottom" id="62P-kx-urg"/>
+                                            <constraint firstItem="sAS-vT-u2w" firstAttribute="top" secondItem="rci-wL-TnB" secondAttribute="top" id="8Tr-6g-bda"/>
+                                            <constraint firstAttribute="trailing" secondItem="sAS-vT-u2w" secondAttribute="trailing" id="Xa4-xl-tBl"/>
+                                            <constraint firstItem="sAS-vT-u2w" firstAttribute="leading" secondItem="rci-wL-TnB" secondAttribute="leading" id="Zhc-6l-8PZ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="rci-wL-TnB" firstAttribute="width" secondItem="owJ-lD-EBD" secondAttribute="width" id="2w2-hC-SHV"/>
+                                    <constraint firstAttribute="trailing" secondItem="rci-wL-TnB" secondAttribute="trailing" id="9HJ-NF-ytT"/>
+                                    <constraint firstAttribute="bottom" secondItem="rci-wL-TnB" secondAttribute="bottom" id="AeI-Oc-WQP"/>
+                                    <constraint firstItem="rci-wL-TnB" firstAttribute="top" secondItem="owJ-lD-EBD" secondAttribute="top" id="n8h-tx-mun"/>
+                                    <constraint firstItem="rci-wL-TnB" firstAttribute="leading" secondItem="owJ-lD-EBD" secondAttribute="leading" id="qzD-PJ-wGX"/>
+                                </constraints>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtD-5h-QI4" userLabel="rating">
+                                <rect key="frame" x="249" y="45" width="51" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="51" id="Soi-gY-4Za"/>
+                                    <constraint firstAttribute="height" constant="30" id="sah-yg-qkW"/>
+                                </constraints>
+                                <state key="normal" image="rating2"/>
                                 <connections>
-                                    <action selector="emailSupport:" destination="xaU-kE-IpR" eventType="touchUpInside" id="Jew-lY-8uk"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLu-CW-0rf">
-                                <rect key="frame" x="20" y="41" width="37" height="34"/>
-                                <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="17"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="dismiss:" destination="xaU-kE-IpR" eventType="touchUpInside" id="cdB-pk-1Qh"/>
+                                    <action selector="emailSupport:" destination="xaU-kE-IpR" eventType="touchUpInside" id="P3E-sO-8tK"/>
+                                    <action selector="rateApp:" destination="xaU-kE-IpR" eventType="touchUpInside" id="h96-U0-JKt"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="NLu-CW-0rf" firstAttribute="top" secondItem="fs0-bQ-smt" secondAttribute="top" constant="1" id="5xN-gB-E2N"/>
-                            <constraint firstItem="rBg-Hx-Nql" firstAttribute="trailing" secondItem="fs0-bQ-smt" secondAttribute="trailing" constant="20" id="Acb-db-A7X"/>
-                            <constraint firstItem="rBg-Hx-Nql" firstAttribute="trailing" secondItem="sAS-vT-u2w" secondAttribute="trailing" constant="20" id="CdO-YJ-6N5"/>
+                            <constraint firstItem="owJ-lD-EBD" firstAttribute="centerX" secondItem="mib-QP-MBu" secondAttribute="centerX" id="AbE-sE-lla"/>
+                            <constraint firstItem="rBg-Hx-Nql" firstAttribute="trailing" secondItem="owJ-lD-EBD" secondAttribute="trailing" constant="20" id="C6L-3q-DuL"/>
                             <constraint firstItem="NLu-CW-0rf" firstAttribute="leading" secondItem="rBg-Hx-Nql" secondAttribute="leading" constant="20" id="D6L-CX-mFl"/>
-                            <constraint firstItem="sAS-vT-u2w" firstAttribute="top" secondItem="fs0-bQ-smt" secondAttribute="bottom" constant="20" id="JSe-De-Czb"/>
-                            <constraint firstItem="sAS-vT-u2w" firstAttribute="leading" secondItem="rBg-Hx-Nql" secondAttribute="leading" constant="20" id="aS7-9c-eqX"/>
+                            <constraint firstItem="fs0-bQ-smt" firstAttribute="centerX" secondItem="mib-QP-MBu" secondAttribute="centerX" id="P4n-S0-VKR"/>
+                            <constraint firstItem="owJ-lD-EBD" firstAttribute="leading" secondItem="rBg-Hx-Nql" secondAttribute="leading" constant="20" id="POF-Hq-oie"/>
+                            <constraint firstItem="rBg-Hx-Nql" firstAttribute="bottom" secondItem="owJ-lD-EBD" secondAttribute="bottom" id="W0E-8B-7Ob"/>
+                            <constraint firstItem="owJ-lD-EBD" firstAttribute="top" secondItem="fs0-bQ-smt" secondAttribute="bottom" constant="10" id="bPD-fI-zJx"/>
                             <constraint firstItem="fs0-bQ-smt" firstAttribute="top" secondItem="rBg-Hx-Nql" secondAttribute="top" constant="20" id="gFd-ji-rOO"/>
-                            <constraint firstItem="fs0-bQ-smt" firstAttribute="leading" secondItem="rBg-Hx-Nql" secondAttribute="leading" constant="20" id="lRX-kT-r5r"/>
+                            <constraint firstItem="VtD-5h-QI4" firstAttribute="top" secondItem="fs0-bQ-smt" secondAttribute="top" constant="5" id="mRc-y5-k6P"/>
+                            <constraint firstItem="rBg-Hx-Nql" firstAttribute="trailing" secondItem="VtD-5h-QI4" secondAttribute="trailing" constant="20" id="qkt-eV-Sgx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rBg-Hx-Nql"/>
                     </view>
@@ -399,8 +448,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backarrow" width="626" height="626"/>
         <image name="checkmarkwhite" width="512" height="512"/>
         <image name="clockIcon" width="128" height="128"/>
+        <image name="email" width="225" height="225"/>
+        <image name="rating2" width="980" height="578"/>
         <image name="recurIcon" width="512" height="512"/>
     </resources>
 </document>
